crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_occupancy_grid.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/test_suite.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_occupancy_grid.mcap
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                                │
│ * entity_path: /map                                                                                                                                                                                                                      │
│ * id: [**REDACTED**]                                                                                                                                                                                                                     │
│ * version: [**REDACTED**]                                                                                                                                                                                                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┬────────────────────┐ │
│ │ RowId              ┆ message_log_time   ┆ message_publish_ti ┆ ros2_timestamp     ┆ CoordinateFrame:fr ┆ GridMap:cell_size  ┆ GridMap:colormap   ┆ GridMap:data       ┆ GridMap:format     ┆ GridMap:quaternion ┆ GridMap:translatio │ │
│ │ ---                ┆ ---                ┆ me                 ┆ ---                ┆ ame                ┆ ---                ┆ ---                ┆ ---                ┆ ---                ┆ ---                ┆ n                  │ │
│ │ type: non-null Fix ┆ type:              ┆ ---                ┆ type:              ┆ ---                ┆ type:              ┆ type: List(UInt8)  ┆ type:              ┆ type: List(Struct( ┆ type: List(FixedSi ┆ ---                │ │
│ │ edSizeBinary(16)   ┆ Timestamp(ns)      ┆ type:              ┆ Timestamp(ns)      ┆ type: List(Utf8)   ┆ List(Float32)      ┆ archetype: GridMap ┆ List(List(UInt8))  ┆ "width": non-null  ┆ zeList(4 x         ┆ type: List(FixedSi │ │
│ │ ARROW:extension:me ┆ index_name:        ┆ Timestamp(ns)      ┆ index_name:        ┆ archetype:         ┆ archetype: GridMap ┆ component:         ┆ archetype: GridMap ┆ UInt32, "height":  ┆ non-null Float32)) ┆ zeList(3 x         │ │
│ │ tadata: {"namespac ┆ message_log_time   ┆ index_name: messag ┆ ros2_timestamp     ┆ CoordinateFrame    ┆ component:         ┆ GridMap:colormap   ┆ component:         ┆ non-null UInt32,   ┆ archetype: GridMap ┆ non-null Float32)) │ │
│ │ e":"row"}          ┆ is_sorted: true    ┆ e_publish_time     ┆ is_sorted: true    ┆ component: Coordin ┆ GridMap:cell_size  ┆ component_type:    ┆ GridMap:data       ┆ "pixel_format":    ┆ component:         ┆ archetype: GridMap │ │
│ │ ARROW:extension:na ┆ kind: index        ┆ is_sorted: true    ┆ kind: index        ┆ ateFrame:frame     ┆ component_type:    ┆ Colormap           ┆ component_type:    ┆ UInt8,             ┆ GridMap:quaternion ┆ component: GridMap │ │
│ │ me: TUID           ┆                    ┆ kind: index        ┆                    ┆ component_type:    ┆ CellSize           ┆ kind: data         ┆ ImageBuffer        ┆ "color_model":     ┆ component_type:    ┆ :translation       │ │
│ │ is_sorted: true    ┆                    ┆                    ┆                    ┆ TransformFrameId   ┆ kind: data         ┆                    ┆ kind: data         ┆ UInt8, "channel_da ┆ RotationQuat       ┆ component_type:    │ │
│ │ kind: control      ┆                    ┆                    ┆                    ┆ kind: data         ┆                    ┆                    ┆                    ┆ tatype": UInt8))   ┆ kind: data         ┆ Translation3D      │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ archetype: GridMap ┆                    ┆ kind: data         │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ component:         ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ GridMap:format     ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ component_type:    ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ ImageFormat        ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ kind: data         ┆                    ┆                    │ │
│ ╞════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╪════════════════════╡ │
│ │ row_[**REDACTED**] ┆ 1970-01-01T00:00:0 ┆ 1970-01-01T00:00:0 ┆ 1970-01-01T00:00:0 ┆ [map]              ┆ [0.5]              ┆ [10]               ┆ [[255, 0, 100, 0,  ┆ [{width: 5,        ┆ [[0.0, 0.0, 0.0,   ┆ [[-1.0, -1.0,      │ │
│ │                    ┆ 0                  ┆ 0                  ┆ 0                  ┆                    ┆                    ┆                    ┆ 255, 0, 100, 255,  ┆ height: 5,         ┆ 1.0]]              ┆ 0.0]]              │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ 100, 0, 100, 255,  ┆ pixel_format:      ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ 0, 255, 100, 0,    ┆ null, color_model: ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ 100, 255, 100, 0,  ┆ 1,                 ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ 127, 0, 100…       ┆ channel_datatype:  ┆                    ┆                    │ │
│ │                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆                    ┆ 6}]                ┆                    ┆                    │ │
│ └────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┴────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
