crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_relative_humidity.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_relative_humidity.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                          │
│ * entity_path: /env/humidity                                                                                                                                                                                                       │
│ * id: [**REDACTED**]                                                                                                                                                                                                               │
│ * version: [**REDACTED**]                                                                                                                                                                                                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬──────────────────────────────┬────────────────────────────────┬────────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_log_time             ┆ message_publish_time           ┆ ros2_timestamp             ┆ CoordinateFrame:frame          ┆ Measurements:values            ┆ Measurements:variances         │ │
│ │ ---                            ┆ ---                          ┆ ---                            ┆ ---                        ┆ ---                            ┆ ---                            ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)          ┆ type: Timestamp(ns)            ┆ type: Timestamp(ns)        ┆ type: List(Utf8)               ┆ type: List(Float64)            ┆ type: List(Float64)            │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_log_time ┆ index_name:                    ┆ index_name: ros2_timestamp ┆ archetype: CoordinateFrame     ┆ archetype: Measurements        ┆ archetype: Measurements        │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true              ┆ message_publish_time           ┆ is_sorted: true            ┆ component:                     ┆ component: Measurements:values ┆ component:                     │ │
│ │ {"namespace":"row"}            ┆ kind: index                  ┆ is_sorted: true                ┆ kind: index                ┆ CoordinateFrame:frame          ┆ component_type: Scalar         ┆ Measurements:variances         │ │
│ │ ARROW:extension:name: TUID     ┆                              ┆ kind: index                    ┆                            ┆ component_type:                ┆ kind: data                     ┆ component_type: Variance       │ │
│ │ is_sorted: true                ┆                              ┆                                ┆                            ┆ TransformFrameId               ┆                                ┆ kind: data                     │ │
│ │ kind: control                  ┆                              ┆                                ┆                            ┆ kind: data                     ┆                                ┆                                │ │
│ ╞════════════════════════════════╪══════════════════════════════╪════════════════════════════════╪════════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 2026-09-02T12:08:52.285523   ┆ 2026-09-02T12:08:52.285523     ┆ 2026-09-02T12:08:52.285523 ┆ [hygrometer]                   ┆ [0.3]                          ┆ [0.0]                          │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-02T12:08:52.385523   ┆ 2026-09-02T12:08:52.385523     ┆ 2026-09-02T12:08:52.385523 ┆ [hygrometer]                   ┆ [0.45]                         ┆ [0.0009]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-02T12:08:52.485523   ┆ 2026-09-02T12:08:52.485523     ┆ 2026-09-02T12:08:52.485523 ┆ [hygrometer]                   ┆ [0.72]                         ┆ [0.0016]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-02T12:08:52.585523   ┆ 2026-09-02T12:08:52.585523     ┆ 2026-09-02T12:08:52.585523 ┆ [hygrometer]                   ┆ [0.9]                          ┆ [0.0036]                       │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-02T12:08:52.685523   ┆ 2026-09-02T12:08:52.685523     ┆ 2026-09-02T12:08:52.685523 ┆ [hygrometer]                   ┆ [0.95]                         ┆ [0.0049]                       │ │
│ └────────────────────────────────┴──────────────────────────────┴────────────────────────────────┴────────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
