crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_temperature.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_temperature.mcap
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                         │
│ * entity_path: /env/temperature                                                                                                                                                                                                   │
│ * id: [**REDACTED**]                                                                                                                                                                                                              │
│ * version: [**REDACTED**]                                                                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┐ │
│ │ RowId                     ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame:frame     ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       │ │
│ │ type: non-null            ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: List(Utf8)          ┆ type: List(Utf8)          ┆ type: List(Float64)       ┆ type: List(Float64)       │ │
│ │ FixedSizeBinary(16)       ┆ index_name:               ┆ index_name:               ┆ index_name:               ┆ archetype:                ┆ archetype: Measurements   ┆ archetype: Measurements   ┆ archetype: Measurements   │ │
│ │ ARROW:extension:metadata: ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame           ┆ component:                ┆ component:                ┆ component:                │ │
│ │ {"namespace":"row"}       ┆ is_sorted: true           ┆ is_sorted: true           ┆ is_sorted: true           ┆ component:                ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ARROW:extension:name:     ┆ kind: index               ┆ kind: index               ┆ kind: index               ┆ CoordinateFrame:frame     ┆ component_type: Unit      ┆ component_type: Scalar    ┆ component_type: Variance  │ │
│ │ TUID                      ┆                           ┆                           ┆                           ┆ component_type:           ┆ kind: data                ┆ kind: data                ┆ kind: data                │ │
│ │ is_sorted: true           ┆                           ┆                           ┆                           ┆ TransformFrameId          ┆                           ┆                           ┆                           │ │
│ │ kind: control             ┆                           ┆                           ┆                           ┆ kind: data                ┆                           ┆                           ┆                           │ │
│ ╞═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╡ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.54584 ┆ 2026-09-02T12:08:51.54584 ┆ 2026-09-02T12:08:51.54584 ┆ [thermometer]             ┆ [°C]                      ┆ [21.0]                    ┆ [0.0]                     │ │
│ │                           ┆ 5                         ┆ 5                         ┆ 5                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.64584 ┆ 2026-09-02T12:08:51.64584 ┆ 2026-09-02T12:08:51.64584 ┆ [thermometer]             ┆ [°C]                      ┆ [21.5]                    ┆ [1.0]                     │ │
│ │                           ┆ 5                         ┆ 5                         ┆ 5                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.74584 ┆ 2026-09-02T12:08:51.74584 ┆ 2026-09-02T12:08:51.74584 ┆ [thermometer]             ┆ [°C]                      ┆ [22.0]                    ┆ [0.25]                    │ │
│ │                           ┆ 5                         ┆ 5                         ┆ 5                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.84584 ┆ 2026-09-02T12:08:51.84584 ┆ 2026-09-02T12:08:51.84584 ┆ [thermometer]             ┆ [°C]                      ┆ [21.8]                    ┆ [0.04]                    │ │
│ │                           ┆ 5                         ┆ 5                         ┆ 5                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.94584 ┆ 2026-09-02T12:08:51.94584 ┆ 2026-09-02T12:08:51.94584 ┆ [thermometer]             ┆ [°C]                      ┆ [21.2]                    ┆ [0.04]                    │ │
│ │                           ┆ 5                         ┆ 5                         ┆ 5                         ┆                           ┆                           ┆                           ┆                           │ │
│ └───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
